24-spire-cross-version-mtls/manifests/spiffe-csi-driver-cluster1.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: spiffe-csi-driver
  namespace: spire-xver-agent
  labels:
    app: spiffe-csi-driver
spec:
  selector:
    matchLabels:
      app: spiffe-csi-driver
  template:
    metadata:
      namespace: spire-xver-agent
      labels:
        app: spiffe-csi-driver
    spec:
      serviceAccountName: spiffe-csi-driver
      containers:
        - name: spiffe-csi-driver
          image: ghcr.io/spiffe/spiffe-csi-driver:0.2.13
          imagePullPolicy: IfNotPresent
          args: [
            "-workload-api-socket-dir", "/spire-agent-socket",
            "-csi-socket-path", "/spiffe-csi/csi.sock",
            "-plugin-name", "csi-xver.spiffe.io",
          ]
          volumeMounts:
            - mountPath: /spire-agent-socket
              name: spire-agent-socket-dir
              readOnly: true
            - mountPath: /spiffe-csi
              name: spiffe-csi-socket-dir
            - mountPath: /var/lib/kubelet/pods
              mountPropagation: Bidirectional
              name: mountpoint-dir
          securityContext:
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
            privileged: true
        - name: node-driver-registrar
          image: registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.16.0
          imagePullPolicy: IfNotPresent
          args: [
            "-csi-address", "/spiffe-csi/csi.sock",
            "-kubelet-registration-path", "/var/lib/kubelet/plugins/csi-xver.spiffe.io/csi.sock",
          ]
          volumeMounts:
            - mountPath: /spiffe-csi
              name: spiffe-csi-socket-dir
            - name: kubelet-plugin-registration-dir
              mountPath: /registration
      volumes:
        - name: spire-agent-socket-dir
          hostPath:
            path: /run/spire-xver-agent/sockets
            type: DirectoryOrCreate
        - name: spiffe-csi-socket-dir
          hostPath:
            path: /var/lib/kubelet/plugins/csi-xver.spiffe.io
            type: DirectoryOrCreate
        - name: mountpoint-dir
          hostPath:
            path: /var/lib/kubelet/pods
            type: Directory
        - name: kubelet-plugin-registration-dir
          hostPath:
            path: /var/lib/kubelet/plugins_registry
            type: Directory
